:gear: more changes

--- a/index.html
+++ b/index.html
@@ -95,25 +95,29 @@
         <h2 class="ss-about-h1">I'm <a class="ss-name" style="overflow-wrap: normal;">Srevin Saju</a></h2>
         <p class="ss-about-content">
           I am an <a class="ss-fun-link" href="https://github.com/srevinsaju" target="_blank">Open Source Developer</a>,
-          Graphic Designer and Web developer, working on 
-          <a class="ss-fun-link" href="#projects">interesting software</a> to learn something new everyday!
-          I try to make s
+          Graphic Designer and Web developer, working primarily on <a class="ss-fun-link" href="https://python.org" target="_blank">Python</a>, creating 
+          <a class="ss-fun-link" href="#projects">interesting software</a> to learn something new everyday! <br>
+          I help create <a class="ss-fun-link" href="https://opensource.com/article/18/1/how-install-apps-linux" target="_blank">easy-to-install</a> binary distibutions of trending open source software for the Linux Operating System.
+
+
        </p>
+       <br>
        <div class="container" style="margin-top: 0.5em;">
          <!-- Contact icons -->
-         <a class="ss-contacts" href="#" target="_blank"><i class="fab fa-linkedin-in"></i><span class="sr-only">Linkedin</span></a>
-         <a class="ss-contacts" href="#" target="_blank"><i class="fa fa-github"></i><span class="sr-only">GitHub</span></a>
-         <a class="ss-contacts" href="#" target="_blank"><i class="fa fa-twitter"></i><span class="sr-only">Twitter</span></a>
-         <a class="ss-contacts" href="#" target="_blank"><i class="fa fa-gitlab"></i><span class="sr-only">GitLab</span></a>
+         <a class="ss-contacts" href="#" target="_blank" style="color: #FFF;"><i class="fab fa-linkedin-in"></i><span class="sr-only">Linkedin</span></a>
+         <a class="ss-contacts" href="#" target="_blank" style="color: #FFF;"><i class="fa fa-github"></i><span class="sr-only">GitHub</span></a>
+         <a class="ss-contacts" href="#" target="_blank" style="color: #FFF;"><i class="fa fa-twitter"></i><span class="sr-only">Twitter</span></a>
+         <a class="ss-contacts" href="#" target="_blank" style="color: #FFF;"><i class="fa fa-gitlab"></i><span class="sr-only">GitLab</span></a>
        </div>
 
       </div>
     </section>
 
     <!-- PROJECTS SECTION -->
-    <section id="projects" class="section">
+    <section id="projects" class="section" style="margin-top: 2em;">
       <div class="container">
-        <h2 class="ss-md-center">Projects</h2>
+        <h2 class="ss-about-h1 ss-md-center">Projects 👨‍💻</h2>
+        <br>
         <p class="ss-md-center">Some of my interesting Open Source Projects!! </p> 
 
         <div class="columns is-desktop" style="margin: 1em 0;">
@@ -388,6 +392,219 @@
       </div>
     </section>
 
+    <!-- skills SECTION -->
+    <section id="skills" class="section">
+      <div class="container" style="margin-top: 10vh">
+        <h2 class="ss-about-h1 ss-md-center">Skills 😎</h2>
+        <br>
+        <p class="ss-md-center">Some of my interesting Open Source Projects!! </p> 
+
+        <div class="columns is-multiline is-desktop" style="margin: 1em 0;">
+
+          <!-- card 4 / carbonic -->
+          <div class="column ss-project-column">
+            <div class="card ss-card  mb-medium">
+              <div class="card-content">
+                <div class="media">
+                  <div class="media-left">
+                    <div class="ss-skill-img is-48x48">
+                      <i class="fab fa-python"></i>
+                    </div>
+                  </div>
+                  <div class="media-content">
+                    <p class="title is-4">Python</p>
+                    <p class="subtitle is-6">Programming | GUI development | Problem Solving</p>
+                  </div>
+                </div>
+                <div class="content">
+                  Worked with <strong>Sugar Labs</strong> Organization in maintaining the Sugar OS and Sugar Activities
+                  for non-profit education. Created <a class="ss-fun-link-small" href="https://github.com/srevinsaju/guiscrcpy" target="_blank">guiscrcpy</a> using Python and Qt5 GUI framework and currently working
+                  on a simple Artificial Intelligence <a class="ss-fun-link-small" href="https://github.com/srevinsaju/sugaroid" target="_blank">Sugaroid</a> and <code>aslo4</code>, using Python as a static site generator
+                  for the Sugar Labs Activity Store. Worked with <code>Django</code> and <code>gunicorn</code>
+                </div>
+              </div>
+            </div>
+
+            <div class="card ss-card  mb-medium">
+              <div class="card-content">
+                <div class="media">
+                  <div class="media-left">
+                    <div class="ss-skill-img is-48x48">
+                      <i class="fab fa-linux"></i>
+                    </div>
+                  </div>
+                  <div class="media-content">
+                    <p class="title is-4">Linux</p>
+                    <p class="subtitle is-6">Almost all Linux distros 😄</p>
+                  </div>
+                </div>
+                <div class="content">
+                  <i class="fab fa-ubuntu"></i> Ubuntu, <i class="fab fa-fedora"></i> Fedora, 
+                  Arch Linux, Manjaro, <i class="fab fa-centos"></i> CentOS, <i class="fab fa-redhat ss-i"></i> RedHat Enterprise Linux, Debian
+                  and of course <i class="fab fa-android"></i> Android . Let's see if I can add more!
+                </div>
+              </div>
+            </div>
+
+
+            <div class="card ss-card  mb-medium">
+              <div class="card-content">
+                <div class="media">
+                  <div class="media-left">
+                    <div class="ss-skill-img is-48x48">
+                      <i class="fab fa-git-alt"></i>
+                    </div>
+                  </div>
+                  <div class="media-content">
+                    <p class="title is-4">Git</p>
+                    <p class="subtitle is-6">Version Control System</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- card 4 / carbonic -->
+          <div class="column ss-project-column">
+            <div class="card ss-card  mb-medium">
+              <div class="card-content">
+                <div class="media">
+                  <div class="media-left">
+                    <div class="ss-skill-img is-48x48">
+                      <img src="img/snapcraft.png" alt="Snapcraft" style="height: 0.9em; margin-top: 0.1em;">
+                    </div>
+                  </div>
+                  <div class="media-content">
+                    <p class="title is-4">Snapcraft</p>
+                    <p class="subtitle is-6">Linux / macOS Packaging</p>
+                  </div>
+                </div>
+                <div class="content">
+                  Published a few <code>snap</code> binary images of popular open source software to ease usability in end-users.
+                </div>
+              </div>
+            </div>
+
+            <div class="card ss-card  mb-medium">
+              <div class="card-content">
+                <div class="media">
+                  <div class="media-left">
+                    <div class="ss-skill-img is-48x48">
+                      <i class="fab fa-js-square"></i>
+                    </div>
+                  </div>
+                  <div class="media-content">
+                    <p class="title is-4">Javascript</p>
+                    <p class="subtitle is-6">Web design / Development</p>
+                  </div>
+                </div>
+                <div class="content">
+                  Interested in working with Vanilla JS, Javascript Frameworks like <code>JQuery</code>. 
+                  Currently working on <code>aslo4</code> and developing websites for clients. Worked on 
+                  production level markdown-html documentation using <code>React</code> and <code>Gatsby.js</code>.
+                </div>
+              </div>
+            </div>
+
+            <div class="card ss-card  mb-medium">
+              <div class="card-content">
+                <div class="media">
+                  <div class="media-left">
+                    <div class="ss-skill-img is-48x48">
+                      <img src="img/nginx.svg" style="height: 0.8em;">
+                    </div>
+                  </div>
+                  <div class="media-content">
+                    <p class="title is-4">Nginx</p>
+                    <p class="subtitle is-6">Dynamic Web Hosting</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+          <!-- card 4 / carbonic -->
+          <div class="column ss-project-column">
+            <div class="card ss-card mb-medium">
+              <div class="card-content">
+                <div class="media">
+                  <div class="media-left">
+                    <div class="ss-skill-img is-48x48">
+                      <i class="fa fa-file-download" style="font-size: 0.8em; margin-left: 0.2em;"></i>
+                    </div>
+                  </div>
+                  <div class="media-content">
+                    <p class="title is-4">AppImages</p>
+                    <p class="subtitle is-6">Linux / Crostini Packaging</p>
+                  </div>
+                </div>
+                <div class="content">
+                  Creating AppImages of Python based apps aiming at portability.
+                </div>
+              </div>
+            </div>
+
+
+            <div class="card ss-card  mb-medium">
+              <div class="card-content">
+                <div class="media">
+                  <div class="media-left">
+                    <div class="ss-skill-img is-48x48">
+                      <i class="fa fa-box" style="font-size: 0.9em; width: 1em"></i>
+                    </div>
+                  </div>
+                  <div class="media-content">
+                    <p class="title is-4">Flatpaks</p>
+                    <p class="subtitle is-6">Linux Packaging</p>
+                  </div>
+                </div>
+                <div class="content">
+                  Collaborating with mentors at <a class="ss-fun-link-small" href="https://sugarlabs.org" target="_blank">Sugar Labs</a>, packaged flatpak containerised 
+                  Sugar Activities making Sugar Activities available as a desktop application 
+                </div>
+              </div>
+            </div>
+
+            <div class="card ss-card  mb-medium">
+              <div class="card-content">
+                <div class="media">
+                  <div class="media-left">
+                    <div class="ss-skill-img is-48x48">
+                      <img src="img/kotlin.svg" style="height: 0.8em" alt="Kotlin Logo">
+                    </div>
+                  </div>
+                  <div class="media-content">
+                    <p class="title is-4">Kotlin</p>
+                    <p class="subtitle is-6">Android Framework</p>
+                  </div>
+
+                </div>
+                <div class="content">
+                  Amateur Kotlin developer. Worked with a few local clients for Android apps for users
+                  with Firebase Integration, Material and Android X (Jetpack).
+                </div>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <section id="with">
+      <div class="container" style="margin-top: 2em;">
+        <div class="container has-text-centered">
+          <img class="ss-brand-img" src="/img/sugarlabs.png" alt="Sugar Labs">
+          <img class="ss-brand-img" src="/img/genymobile.png" alt="Genymobile">
+          <img class="ss-brand-img" src="/img/gci.png" alt="Google Code-In">
+        </div>
+      </div>
+    </section>
+
+
     <!-- contact SECTION -->
     <section id="contact" class="section" style="height: 100vh">
       <!-- Discord id -->
@@ -431,6 +648,8 @@
       </div>
     </section>
 
+
+
     <!-- scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script>
@@ -441,6 +660,7 @@
         $(":root").get(0).style.setProperty("--background-color-2", " #000000");
         $("label[for='themeSwitch']").html('<i class="fa fa-moon"></i><span class="sr-only">Dark Mode</span>')
         $('#themeSwitch').prop('checked', true);
+        $("#bulma").attr("src","/img/made-with-bulma--white.png");
       }
 
       function lightTheme() {
@@ -450,6 +670,7 @@
         $(":root").get(0).style.setProperty("--background-color-2", " #ffffff");
         $("label[for='themeSwitch']").html('<i class="fa fa-sun"></i><span class="sr-only">Light Mode</span>')
         $('#themeSwitch').prop('checked', false);
+        $("#bulma").attr("src","/img/made-with-bulma--black.png");
       }
 
       $(document).ready(function(){
@@ -460,7 +681,10 @@
         }
 
         $(window).scroll(function(){
-          $("#main").css("opacity", 1 - ($(window).scrollTop() / $('#main').height())*2);
+          const newOpacity = ($(window).scrollTop() / $('#main').height())*2
+          if (newOpacity <= 1) {
+            $("#main").css("opacity", 1 - newOpacity);
+          }
         });
 
         $('#themeSwitch').change(function() {
@@ -480,12 +704,19 @@
       <p>
         &copy; <strong>Srevin Saju</strong> 2020.
         <br>
-        This website is licensed under a <a href="http://creativecommons.org/licenses/by-nc-nd/4.0">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License.</a>
+        This website is licensed under a <a href="http://creativecommons.org/licenses/by-nc-nd/4.0" target="_blank">
+          Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License.
+        </a>
         <br>
-        <em>You are allowed to take <strong>inspiration</strong> from this website, not the <strong>source code.</strong></em>
-        <br>Read <a href="LICENSE">LICENSE</a> for more information. 
+        <a href="https://bulma.io">
+          <img id="bulma" src="/img/made-with-bulma--black.png" alt="Made with Proudly built with Bulma" width="128" height="24" style="margin-bottom: 0;">
+        </a>
+        <br>
+        Icons provided by <a href="https://fontawesome.com/" target="_blank">FontAwesome</a> and <a href="https://vedico-org.github.io/" target="_blank">Vedico</a>
+        <br>
+ 
       </p>
-      <img src="img/by-nc-nd.svg" alt="CC-BY-NC-ND"> 
+      <a href="http://creativecommons.org/licenses/by-nc-nd/4.0" target="_blank"><img src="img/by-nc-nd.svg" alt="CC-BY-NC-ND"></a>
 
     </div>
   </footer>
