--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <meta name="description" content="Srevin Saju | Open Source Software Developer. Developer at Sugar Labs. Google Code-In Grand Prize Winner 2019-2020">
     <meta name="keywords" content="Srevin Saju, Google, Code-In, Open Source, GitHub, Sugar Labs, Srevin, New Indian School, Bahrain">
     <meta name="author" content="Srevin Saju">
+
+    <!-- OG -->
+    <meta property="og:title" content="Srevin Saju" />
+    <meta property="og:url" content="https://srevinsaju.me" />
+    <meta property="og:image" content="https://srevinsaju.me/img/ss-logo-small.png" />
+    <meta property="og:description" content="Srevin Saju | Open Source Software Developer. Developer at Sugar Labs. Google Code-In Grand Prize Winner 2019-2020" />
+    <meta property="og:site_name" content="srevinsaju" />
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://kit.fontawesome.com/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
@@ -23,7 +31,7 @@
     <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href="#main">
-          <img src="/img/ss-logo-small.png" height="28" alt="Srevin Saju Logo Navbars">
+          <img src="/img/ss-logo-small.png" height="28" alt="Srevin Saju Logo">
         </a>
     
         <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="ssNavBarTop" 
@@ -511,7 +519,7 @@
                 <div class="media">
                   <div class="media-left">
                     <div class="ss-skill-img is-48x48">
-                      <img src="img/nginx.svg" style="height: 0.8em;">
+                      <img src="img/nginx.svg" style="height: 0.8em;" alt="Nginx Logo">
                     </div>
                   </div>
                   <div class="media-content">
@@ -597,9 +605,9 @@
     <section id="with">
       <div class="container" style="margin-top: 2em;">
         <div class="container has-text-centered">
-          <img class="ss-brand-img" src="/img/sugarlabs.png" alt="Sugar Labs">
-          <img class="ss-brand-img" src="/img/genymobile.png" alt="Genymobile">
-          <img class="ss-brand-img" src="/img/gci.png" alt="Google Code-In">
+          <a href="https://sugarlabs.org" target="_blank"><img class="ss-brand-img" src="/img/sugarlabs.png" alt="Sugar Labs"></a> 
+          <a href="https://www.genymobile.com/" target="_blank"><img class="ss-brand-img" src="/img/genymobile.png" alt="Genymobile"></a>
+          <a href="https://codein.withgoogle.com/archive/2019/" target="_blank"><img class="ss-brand-img" src="/img/gci.png" alt="Google Code-In"></a>
         </div>
       </div>
     </section>
