Add links to <a> tags without href

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             Projects
           </a>
           <div class="navbar-item has-dropdown is-hoverable">
-            <a class="navbar-link">
+            <a class="navbar-link" href="#"  onclick="return false;">
               More
             </a>
     
@@ -100,7 +100,7 @@
     <section id="about" class="section" style="height: 100vh">
       <div class="container ss-aboutbox">
         <h1 class="ss-about-hey">Hey 👋</h1>
-        <h2 class="ss-about-h1">I'm <a class="ss-name" style="overflow-wrap: normal;">Srevin Saju</a></h2>
+        <h2 class="ss-about-h1">I'm <a class="ss-name" style="overflow-wrap: normal;" href="#" onclick="return false;">Srevin Saju</a></h2>
         <p class="ss-about-content">
           I am an <a class="ss-fun-link" href="https://github.com/srevinsaju" target="_blank">Open Source Developer</a>,
           Graphic Designer and Web developer, working primarily on <a class="ss-fun-link" href="https://python.org" target="_blank">Python</a>, creating 
