Fix empty links

--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
        <br>
        <div class="container" style="margin-top: 0.5em;">
          <!-- Contact icons -->
-         <a class="ss-contacts" href="#" target="_blank" rel="noreferrer" style="color: #FFF;"><i class="fab fa-linkedin-in"></i><span class="sr-only">Linkedin</span></a>
-         <a class="ss-contacts" href="#" target="_blank" rel="noreferrer" style="color: #FFF;"><i class="fa fa-github"></i><span class="sr-only">GitHub</span></a>
-         <a class="ss-contacts" href="#" target="_blank" rel="noreferrer" style="color: #FFF;"><i class="fa fa-twitter"></i><span class="sr-only">Twitter</span></a>
-         <a class="ss-contacts" href="#" target="_blank" rel="noreferrer" style="color: #FFF;"><i class="fa fa-gitlab"></i><span class="sr-only">GitLab</span></a>
+         <a class="ss-contacts" href="https://linkedin.com/in/srevinsaju" target="_blank" rel="noreferrer" style="color: #FFF;"><i class="fab fa-linkedin-in"></i><span class="sr-only">Linkedin</span></a>
+         <a class="ss-contacts" href="https://gitlab.com/srevinsaju" target="_blank" rel="noreferrer" style="color: #FFF;"><i class="fa fa-github"></i><span class="sr-only">GitHub</span></a>
+         <a class="ss-contacts" href="https://twitter.com/srevinsaju" target="_blank" rel="noreferrer" style="color: #FFF;"><i class="fa fa-twitter"></i><span class="sr-only">Twitter</span></a>
+         <a class="ss-contacts" href="https://gitlab.com/srevinsaju" target="_blank" rel="noreferrer" style="color: #FFF;"><i class="fa fa-gitlab"></i><span class="sr-only">GitLab</span></a>
        </div>
 
       </div>
