--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                 <div class="media">
                   <div class="media-left">
                     <div class="ss-skill-img is-48x48">
-                      <img src="img/snapcraft.png" alt="Snapcraft" style="height: 0.9em; margin-top: 0.1em;">
+                      <img src="img/snapcraft.png" alt="Snapcraft" style="height: 0.9em;">
                     </div>
                   </div>
                   <div class="media-content">
@@ -545,7 +545,7 @@
                 <div class="media">
                   <div class="media-left">
                     <div class="ss-skill-img is-48x48">
-                      <i class="fa fa-file-download" style="font-size: 0.8em; margin-left: 0.2em;"></i>
+                      <i class="fa fa-file-download" style="font-size: 0.8em;"></i>
                     </div>
                   </div>
                   <div class="media-content">
