fix: update link to the new aslo-v4

--- a/aslo/index.html
+++ b/aslo/index.html
@@ -11,7 +11,7 @@
     <meta name="Description" content="Sugar Labs Appstore for Sugar Activities">
     
     <meta property="og:title" content="Sugar Labs Appstore" />
-    <meta property="og:url" content="http://sugarstore.netlify.app" />
-    <meta http-equiv="refresh" content="0;url=https://sugarstore.netlify.app"/>
+    <meta property="og:url" content="https://people.sugarlabs.org/~srevinsaju/aslo/" />
+    <meta http-equiv="refresh" content="0;url=https://people.sugarlabs.org/~srevinsaju/aslo/"/>
   </head>
 </html>
