fix: link to zap

--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
                 <a href="https://github.com/srevinsaju/zap" class="card-footer-item" target="_blank" rel="noreferrer">
                   <i class="fa fa-github ss-i"></i><span class="ss-card-footer-text">GitHub</span>
                 </a>
-                <a href="https://github.com/srevinsaju/zap#basic-installation" class="card-footer-item" target="_blank" rel="noreferrer">
-                  <i class="fa fa-download ss-i"></i><span class="ss-card-footer-text">Install</span>
+                <a href="/zap" class="card-footer-item" target="_blank" rel="noreferrer">
+                  <i class="fa fa-download ss-i"></i><span class="ss-card-footer-text">Website</span>
                 </a>
               </footer>
             </div>
