fix: Use relative paths in hrefs

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 <a href="https://github.com/srevinsaju/zap" class="card-footer-item" target="_blank" rel="noreferrer">
                   <i class="fa fa-github ss-i"></i><span class="ss-card-footer-text">GitHub</span>
                 </a>
-                <a href="/zap" class="card-footer-item" target="_blank" rel="noreferrer">
+                <a href="./zap" class="card-footer-item" target="_blank" rel="noreferrer">
                   <i class="fa fa-download ss-i"></i><span class="ss-card-footer-text">Website</span>
                 </a>
               </footer>
@@ -351,7 +351,7 @@
                 <a href="https://github.com/srevinsaju/pyappimage" class="card-footer-item"  target="_blank" rel="noreferrer">
                   <i class="fa fa-github ss-i"></i><span class="ss-card-footer-text">GitHub</span>
                 </a>
-                <a href="/get-appimage/pyappimage" class="card-footer-item"  target="_blank" rel="noreferrer">
+                <a href="./get-appimage/pyappimage" class="card-footer-item"  target="_blank" rel="noreferrer">
                   <i class="fa fa-download ss-i"></i><span class="ss-card-footer-text">Download</span>
                 </a>
 
@@ -393,7 +393,7 @@
                 <a href="https://github.com/srevinsaju/get-appimage" class="card-footer-item" target="_blank" rel="noreferrer">
                   <i class="fa fa-github ss-i"></i><span class="ss-card-footer-text">GitHub</span>
                 </a>
-                <a href="/get-appimage" class="card-footer-item" target="_blank" rel="noreferrer">
+                <a href="./get-appimage" class="card-footer-item" target="_blank" rel="noreferrer">
                   <i class="fa fa-wifi ss-i"></i><span class="ss-card-footer-text">Website</span>
                 </a>
               </footer>
@@ -439,7 +439,7 @@
                 <a href="https://github.com/srevinsaju/carbonic" class="card-footer-item" target="_blank" rel="noreferrer">
                   <i class="fa fa-github ss-i"></i><span class="ss-card-footer-text">GitHub</span>
                 </a>
-                <a href="/carbonic/" class="card-footer-item" target="_blank" rel="noreferrer">
+                <a href="./carbonic/" class="card-footer-item" target="_blank" rel="noreferrer">
                   <i class="fa fa-wifi ss-i"></i><span class="ss-card-footer-text">Website</span>
                 </a>
               </footer>
@@ -743,7 +743,7 @@
           <a href="https://www.genymobile.com/" target="_blank" rel="noreferrer"><img class="ss-brand-img" src="./img/genymobile.png" alt="Genymobile"></a>
           <a href="https://codein.withgoogle.com/archive/2019/" onclick="scrollFunction();" target="_blank" rel="noreferrer"><img class="ss-brand-img" src="./img/gci.png" alt="Google Code-In"></a>
           <a href="https://element.io" target="_blank" rel="noreferrer"><img class="ss-brand-img" src="./img/element.svg" alt="Element Matrix Client"></a>
-          <a href="/get-appimage" target="_blank" rel="noreferrer"><img class="ss-brand-img" src="./img/appimage_branding.png" alt="AppImage Org"></a>
+          <a href="./get-appimage" target="_blank" rel="noreferrer"><img class="ss-brand-img" src="./img/appimage_branding.png" alt="AppImage Org"></a>
         </div>
       </div>
     </section>
