--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
               <a class="ss-contacts ss-contacts-padding-block" target="_blank" rel="noreferrer" href="https://www.quora.com/profile/Srevin-Saju"><i class="fa fa-quora ss-i"></i><span class="ss-card-footer-text">Quora</span></a>
               <a class="ss-contacts ss-contacts-padding-block" target="_blank" rel="noreferrer" href="https://www.reddit.com/user/srevinsaju/"><i class="fa fa-reddit-alien ss-i"></i><span class="ss-card-footer-text">Reddit</span></a>
 
-              <a class="ss-contacts ss-contacts-padding-block" target="_blank" rel="noreferrer" href="https://mstdn.io/@srevinsaju"><i class="fab fa-mastodon ss-i"></i><span class="ss-card-footer-text">Mastodon</span></a>
+              <a class="ss-contacts ss-contacts-padding-block" target="_blank" rel="me" href="https://mstdn.io/@srevinsaju"><i class="fab fa-mastodon ss-i"></i><span class="ss-card-footer-text">Mastodon</span></a>
               <a class="ss-contacts ss-contacts-padding-block" target="_blank" rel="noreferrer" href="https://instagram.com/srevinsaju"><i class="fab fa-instagram ss-i"></i><span class="ss-card-footer-text">Instagram</span></a>
               <a class="ss-contacts ss-contacts-padding-block" target="_blank" rel="noreferrer" href="https://t.me/srevinsaju"><i class="fab fa-telegram-plane ss-i"></i><span class="ss-card-footer-text">Telegram</span></a>
               <a class="ss-contacts ss-contacts-padding-block" target="_blank" rel="noreferrer" href="https://webchat.freenode.net/"><i class="fa fa-hashtag ss-i"></i><span class="ss-card-footer-text">IRC #srevinsaju</span></a>
