--- a/resume/index.html
+++ b/resume/index.html
@@ -35,7 +35,7 @@
             </a>
         </p>
         <p>GitHub: 
-            <a class="bold-links" href="https://github.com/srevinsaju" rel="_blank">
+            <a class="bold-lddinks" href="https://github.com/srevinsaju" rel="_blank">
                 <i class="fa fa-github"><span class="sr-only">github.com</span></i>/srevinsaju
             </a>
         </p>
