fix: links to sugaroid website

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
        <div class="container" style="margin-top: 0.5em;">
          <!-- Contact icons -->
          <a class="ss-contacts" href="https://linkedin.com/in/srevinsaju" target="_blank" rel="noreferrer" style="color: #FFF;"><i class="fab fa-linkedin-in"></i><span class="sr-only">Linkedin</span></a>
-         <a class="ss-contacts" href="https://gitlab.com/srevinsaju" target="_blank" rel="noreferrer" style="color: #FFF;"><i class="fa fa-github"></i><span class="sr-only">GitHub</span></a>
+         <a class="ss-contacts" href="https://github.com/srevinsaju" target="_blank" rel="noreferrer" style="color: #FFF;"><i class="fa fa-github"></i><span class="sr-only">GitHub</span></a>
          <a class="ss-contacts" href="https://twitter.com/srevinsaju" target="_blank" rel="noreferrer" style="color: #FFF;"><i class="fa fa-twitter"></i><span class="sr-only">Twitter</span></a>
          <a class="ss-contacts" href="https://gitlab.com/srevinsaju" target="_blank" rel="noreferrer" style="color: #FFF;"><i class="fa fa-gitlab"></i><span class="sr-only">GitLab</span></a>
        </div>
@@ -213,13 +213,13 @@
               </div>
 
               <footer class="card-footer ss-card-footer">
-                <a href="https://github.com/srevinsaju/guiscrcpy" class="card-footer-item">
-                  <i class="fa fa-github ss-i"></i><span class="ss-card-footer-text">GitHub</span>
+                <a href="https://gitlab.com/sugaroid/sugaroid" class="card-footer-item">
+                  <i class="fa fa-gitlab ss-i"></i><span class="ss-card-footer-text">GitLab</span>
                 </a>
-                <a href="https://guiscrcpy.github.io" class="card-footer-item">
+                <a href="https://srevinsaju.me/sugaroid" class="card-footer-item">
                   <i class="fa fa-wifi ss-i"></i><span class="ss-card-footer-text">Website</span>
                 </a>
-                <a href="https://sugaroid.azurewebsites.net" class="card-footer-item">
+                <a href="https://sugaroid.srevinsaju.me" class="card-footer-item">
                   <i class="fa fa-comment-alt ss-i"></i><span class="ss-card-footer-text">Try</span>
                 </a>
               </footer>
