fix: bundle jquery

--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
     </section>
 
     <!-- scripts -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="/js/dist/jquery-3.5.1.slim.min.js"></script>
     <script src="/js/index.js" defer></script>
     <script>
       
