feat: add some more resume stuff

--- a/resume/index.html
+++ b/resume/index.html
@@ -160,9 +160,19 @@
               <li>Created <a href="https://github.com/srevinsaju/element-appimage"rel="_blank">continuous integration</a>
                   to automatically build and release AppImages </li>
           </ul>
-
-
           <br>
+
+          <h2 class="heading is-size-5">Research 
+              <a href="https://github.com/srevinsaju/guiscrcpy" rel="_blank">
+                  Integrated Ocean Cleanup System for Sustainable and Healthy Aquatic Eco System
+              </a> (November 2019 - August 2020)</h2>
+          <ul>
+              <li>Worked on an organic, eco-friendly and economical ocean cleanup system.</li>
+              <li>Used artificial intelligence to direct collection of oil spills.</li>
+              <li>Created a prototype which aims at 93.5% absorption of Oil contaminants using naturally biodegradable materials, or reusing non-biodegradable material.</li>
+          </ul>
+          <br>
+
 
           <h2 class="heading is-size-5">Founder / maintainer, 
               <a href="https://github.com/srevinsaju/guiscrcpy" rel="_blank">
@@ -174,6 +184,8 @@
               <li>Worked with AppImages, Flatpak, Snapcraft, Windows executables</li>
           </ul>
           <br>
+
+
           <h2 class="heading is-size-5">Open Sourcerer, 
               <a href="https://github.com/srevinsaju" rel="_blank">
                   <i class="fa fa-github"></i>/@srevinsaju
