--- a/resume/index.html
+++ b/resume/index.html
@@ -122,7 +122,7 @@
       <section class="section" id="#work">
           <h1 class="heading is-size-4">Work Experience</h1>
 
-          <h2 class="heading is-size-5">System Administrator, Sugar Labs (September 2020-<em>present</em>)</h2>
+          <h2 class="heading is-size-5">System Administrator, <a href="https://sugarlabs.org" rel="_blank">Sugar Labs</a> (September 2020-<em>present</em>)</h2>
           <ul>
               <li>Working with MediaWiki <a href="https://wiki.sugarlabs.org">wiki.sugarlabs.org</a></li>
               <li>Matrix Bridge for Sugar @ <a href="https://matrix.to/#/#sugar:matrix.org">#sugar:matrix.org</a></li>
@@ -132,7 +132,7 @@
           <br>
 
 
-          <h2 class="heading is-size-5">Developer, Sugar Labs (2020-<em>present)</em></h2>
+          <h2 class="heading is-size-5">Developer, <a href="https://sugarlabs.org" rel="_blank">Sugar Labs</a> (2020-<em>present)</em></h2>
           <ul>
               <li>Arch Linux git package distributor of sugar, sugar-artwork, sugar-toolkit-gtk3, sugar-toolkit and sugar-runner</li>
               <li>Docker container maintainer for sugar-desktop</li>
@@ -142,7 +142,7 @@
 
           <br>
 
-          <h2 class="heading is-size-5">Developer, AppImage Project (July 2020-<em>present)</em></h2>
+          <h2 class="heading is-size-5">Developer, <a href="https://appimage.org" rel="_blank">AppImage Project</a> (July 2020-<em>present)</em></h2>
           <ul>
               <li>Redesigned the AppImage catalog: <a class="a-bold" href="https://g.srevinsaju.me/get-appimage"  rel="_blank">g.srevinsaju.me/get-appimage</a></li>
               <li>Developed <a class="a-bold" href="https://github.com/srevinsaju/pyappimage" rel="_blank">PyAppImage</a> to easily build and distribute AppImages for Python apps</li>
@@ -153,7 +153,8 @@
 
           <br>
 
-          <h2 class="heading is-size-5">Packager, Element.io (August 2020 - September 2020)</h2>
+          <h2 class="heading is-size-5">Packager, <a href="https://element.io" rel="_blank">Element.io</a> 
+              (August 2020 - September 2020)</h2>
           <ul>
               <li>Short term internship to design a portable mode of distribution of <a href="https://element.io">Element</a> Electron App 
                   <a href="https://github.com/vector-im/element-web/issues/4766">for Linux desktops</a> using AppImages</li>
@@ -163,13 +164,14 @@
           <br>
 
           <h2 class="heading is-size-5">Research 
-              <a href="https://github.com/srevinsaju/guiscrcpy" rel="_blank">
-                  Integrated Ocean Cleanup System for Sustainable and Healthy Aquatic Eco System
+              <a href="https://www.emerginginvestigators.org/articles/integrated-ocean-cleanup-system-for-sustainable-and-healthy-aquatic-ecosystems" rel="_blank">
+                  Integrated Ocean Cleanup System for Sustainable and Healthy Aquatic Ecosystem
               </a> (November 2019 - August 2020)</h2>
           <ul>
               <li>Worked on an organic, eco-friendly and economical ocean cleanup system.</li>
               <li>Used artificial intelligence to direct collection of oil spills.</li>
               <li>Created a prototype which aims at 93.5% absorption of Oil contaminants using naturally biodegradable materials, or reusing non-biodegradable material.</li>
+              <li>Journal article published to <a href="https://www.emerginginvestigators.org/" rel="_blank">Journal of Emerging Investigators</a> on 14 November 2020</li> 
           </ul>
           <br>
 
