--- a/aslo/index.html
+++ b/aslo/index.html
@@ -11,7 +11,7 @@
     <meta name="Description" content="Sugar Labs Appstore for Sugar Activities">
     
     <meta property="og:title" content="Sugar Labs Appstore" />
-    <meta property="og:url" content="https://people.sugarlabs.org/~srevinsaju/aslo/" />
-    <meta http-equiv="refresh" content="0;url=https://people.sugarlabs.org/~srevinsaju/aslo/"/>
+    <meta property="og:url" content="https://v4.activities.sugarlabs.org" />
+    <meta http-equiv="refresh" content="0;url=https://v4.activities.sugarlabs.org"/>
   </head>
 </html>
