feat: add link rel=canonical

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta property="og:site_name" content="srevinsaju">
 
     <!-- Fonts -->
+    <link rel="canonical" href="https://srev.in" />
     <link rel="preconnect" href="https://kit.fontawesome.com/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&amp;display=swap" rel="stylesheet">
