feat: update links to new URL

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <!-- OG -->
     <meta property="og:title" content="Srevin Saju">
-    <meta property="og:url" content="https://srevinsaju.me">
-    <meta property="og:image" content="https://srevinsaju.me/img/ss-logo-small.png">
+    <meta property="og:url" content="https://srev.in">
+    <meta property="og:image" content="https://srev.in/img/ss-logo-small.png">
     <meta property="og:description" content="Srevin Saju | Open Source Software Developer. Developer at Sugar Labs. Google Code-In Grand Prize Winner 2019-2020">
     <meta property="og:site_name" content="srevinsaju">
 
@@ -220,10 +220,10 @@
                 <a href="https://gitlab.com/sugaroid/sugaroid" class="card-footer-item">
                   <i class="fa fa-gitlab ss-i"></i><span class="ss-card-footer-text">GitLab</span>
                 </a>
-                <a href="https://srevinsaju.me/sugaroid" class="card-footer-item">
+                <a href="https://srev.in/sugaroid" class="card-footer-item">
                   <i class="fa fa-wifi ss-i"></i><span class="ss-card-footer-text">Website</span>
                 </a>
-                <a href="https://sugaroid.srevinsaju.me" class="card-footer-item">
+                <a href="https://sugaroid.srev.in" class="card-footer-item">
                   <i class="fa fa-comment-alt ss-i"></i><span class="ss-card-footer-text">Try</span>
                 </a>
               </footer>
