feat: update links to new URL

--- a/resume/index.html
+++ b/resume/index.html
@@ -10,8 +10,8 @@
 
     <!-- OG -->
     <meta property="og:title" content="Srevin Saju" />
-    <meta property="og:url" content="https://srevinsaju.me" />
-    <meta property="og:image" content="https://srevinsaju.me/img/ss-logo-small.png" />
+    <meta property="og:url" content="https://srev.in" />
+    <meta property="og:image" content="https://srev.in/img/ss-logo-small.png" />
     <meta property="og:description" content="Srevin Saju | Open Source Software Developer. Developer at Sugar Labs. Google Code-In Grand Prize Winner 2019-2020" />
     <meta property="og:site_name" content="srevinsaju" />
 
@@ -48,7 +48,7 @@
         </p>
 
         <p class="small-text">
-            Latest version of this resume: https://srevinsaju.me/resume
+            Latest version of this resume: https://srev.in/resume
         </p>
         <p class="small-text" style="word-break: break-word; "> 
           https://people.sugarlabs.org/~srevinsaju/resume/
@@ -172,7 +172,7 @@
 
           <h2 class="subtitle is-size-5">Developer, <a href="https://appimage.org" rel="_blank">AppImage Project</a> (July 2020-<em>present)</em></h2>
           <ul>
-              <li>Redesigned the AppImage catalog: <a class="a-bold" href="https://g.srevinsaju.me/get-appimage"  rel="_blank">g.srevinsaju.me/get-appimage</a></li>
+              <li>Redesigned the AppImage catalog: <a class="a-bold" href="https://g.srev.in/get-appimage"  rel="_blank">g.srev.in/get-appimage</a></li>
               <li>Developed <a class="a-bold" href="https://github.com/srevinsaju/pyappimage" rel="_blank">PyAppImage</a> to easily build and distribute AppImages for Python apps</li>
               <li>Developed <a class="a-bold" href="https://zapx.now.sh" rel="_blank">Zap</a> 
                   Package Manager for AppImages which helps to download, 
