--- a/sugaroid/index.html
+++ b/sugaroid/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to https://g.sugaroid.srev.in/</title>
-<meta http-equiv="refresh" content="0; URL=https://g.sugaroid.srevinsaju.me/">
-<link rel="canonical" href="https://g.sugaroid.srevinsaju.me">
+<meta http-equiv="refresh" content="0; URL=https://g.sugaroid.srev.in/">
+<link rel="canonical" href="https://g.sugaroid.srev.in">
