feat: redirect to srev.in on g.srev.in

--- a/index.html
+++ b/index.html
@@ -788,6 +788,11 @@
     </section>
 
     <!-- scripts -->
+    <script>
+        if (window.location.href == "https://g.srev.in") {
+            window.location.replace("https://srev.in");
+        }
+    </script>
     <script src="/js/dist/jquery-3.5.1.slim.min.js"></script>
     <script src="/js/index.js" defer></script>
     <script>
