feat: add a trailing /

--- a/index.html
+++ b/index.html
@@ -789,8 +789,8 @@
 
     <!-- scripts -->
     <script>
-        if (window.location.href == "https://g.srev.in") {
-            window.location.replace("https://srev.in");
+        if (window.location.href == "https://g.srev.in/") {
+            window.location.replace("https://srev.in/");
         }
     </script>
     <script src="/js/dist/jquery-3.5.1.slim.min.js"></script>
