--- a/index.html
+++ b/index.html
@@ -745,6 +745,7 @@
     <section id="with">
       <div class="container" style="margin-top: 2em;">
         <div class="container has-text-centered">
+          <a href="https://kde.org" target="_blank" rel="noreferrer"><img class="ss-brand-img" src="./img/kde_logo.png" alt="KDE logo"></a>
           <a href="https://sugarlabs.org" target="_blank" rel="noreferrer"><img class="ss-brand-img" src="./img/sugarlabs.png" alt="Sugar Labs"></a> 
           <a href="https://www.genymobile.com/" target="_blank" rel="noreferrer"><img class="ss-brand-img" src="./img/genymobile.png" alt="Genymobile"></a>
           <a href="https://codein.withgoogle.com/archive/2019/" onclick="scrollFunction();" target="_blank" rel="noreferrer"><img class="ss-brand-img" src="./img/gci.png" alt="Google Code-In"></a>
